--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,11 +1,14 @@
 {
-    "builds":[
-        {"src":"*.js", "use":"@vercel/node"}
+    "builds": [
+      {
+        "src": "index.js",
+        "use": "@vercel/node"
+      },
+      {
+        "src": "dist/**",
+        "use": "@vercel/static"
+      }
     ],
-    "routes":[
-        {
-            "src":"/(.*)",
-            "dest":"/"
-        }
-    ]
-}
+  
+    "rewrites": [{ "source": "/(.*)", "destination": "index.js" }]
+  }
