--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "stripe": "^15.3.0"
   }
 }
