--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,76 +1,15 @@
 {
+  "version": 2,
+  "builds": [
+      {
+          "src": "index.js",
+          "use": "@vercel/node"
+      }
+  ],
   "routes": [
-    {
-      "src": "/product",
-      "dest": "index.js"
-    },
-    {
-      "src": "/product/(.*)",
-      "dest": "index.js"
-    },
-    {
-      "src": "/category",
-      "dest": "index.js"
-    },
-    {
-      "src": "/category/(.*)",
-      "dest": "index.js"
-    },
-    {
-      "src": "/brand",
-      "dest": "index.js"
-    },
-    {
-      "src": "/brand/(.*)",
-      "dest": "index.js"
-    },
-    {
-      "src": "/user",
-      "dest": "index.js"
-    },
-    {
-      "src": "/user/(.*)",
-      "dest": "index.js"
-    },
-    {
-      "src": "/auth",
-      "dest": "index.js"
-    },
-    {
-      "src": "/auth/(.*)",
-      "dest": "index.js"
-    },
-    {
-      "src": "/cart",
-      "dest": "index.js"
-    },
-    {
-      "src": "/cart/(.*)",
-      "dest": "index.js"
-    },
-    {
-      "src": "/orders",
-      "dest": "index.js"
-    },
-    {
-      "src": "/orders/(.*)",
-      "dest": "index.js"
-    },
-    {
-      "src": "/webhook",
-      "dest": "index.js"
-    },
-    {
-      "src": "/create-payment-intent",
-      "dest": "index.js"
-    },
-    {
-      "src": "/",
-      "dest": "dest/index.html"
-    },
-    {
-      "src": "/(.+)",
-      "dest": "dest/$1"
-    }
+      {
+          "src": "/(.*)",
+          "dest": "index.js"
+      }
   ]
 }
