--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -13,6 +13,10 @@
           "dest": "index.js"
       },
       {
+        "src": "/(.*)",
+        "dest": "/"
+    },
+      {
         "src": "/product",
         "dest": "index.js"
       },
