--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
+    "memorystore": "^1.6.7",
     "mongoose": "^8.3.2",
     "nodemon": "^3.1.0",
     "passport": "^0.7.0",
