--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "redis": "^4.6.14",
     "stripe": "^15.3.0"
   }
 }
